improved spacing around the stops icon in episodes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -455,6 +455,8 @@
         line-height: 20px;
         margin-top: 0;
         margin-bottom: 0.25em;
+        margin-left: 0.25em;
+        padding-bottom: 1.25em;
         text-align: center;
     }
     .post-header-title {
@@ -465,7 +467,7 @@
         margin-top: 0;
         margin-bottom: 0;
         text-align: center;
-        padding-top: 0.5em;
+        padding-top: 0.25em;
         // border-top: 1px solid $background-hr;
         border-top: 2px solid $brand-color;
         text-align: left;
